--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,23 @@
   @tailwind components;
   @tailwind utilities;
 
+  body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  [data-theme='dark'] {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  [data-theme='light'] {
+    background-color: #fff;
+    color: #333;
+  }
+
   @layer base {
     :root {
       --background: 0 0% 100%;
@@ -74,3 +91,15 @@
       @apply bg-background text-foreground;
     }
   }
+
+  @layer utilities {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+   /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+  }
+}
